[package]
name = "safe-migrate"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nicholas.lordello@gnosis.pm>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
secp256k1 = { version = "0.19", features = ["recovery"] }
sha3 = "0.9"
tiny-bip39 = "0.8"
tiny-hderive = "0.2"

[dev-dependencies]
hex-literal = "0.3"
